build.log
/usr/bin/cmake --build /home/lorand/Documents/learn_opengl/build --target Debug | tee build/build.log
[1/2] Building CXX object CMakeFiles/Debug.dir/src/Model.cpp.o
FAILED: CMakeFiles/Debug.dir/src/Model.cpp.o 
/usr/bin/g++-13  -I/home/lorand/Documents/learn_opengl/include -isystem /usr/lib -std=c++20 -Wall -Wextra -Wpedantic -Werror -Wno-missing-field-initializers -O0 -g -MD -MT CMakeFiles/Debug.dir/src/Model.cpp.o -MF CMakeFiles/Debug.dir/src/Model.cpp.o.d -o CMakeFiles/Debug.dir/src/Model.cpp.o -c /home/lorand/Documents/learn_opengl/src/Model.cpp
/home/lorand/Documents/learn_opengl/src/Model.cpp: In member function ‘Mesh Model::processMesh(const aiMesh*, const aiScene*)’:
/home/lorand/Documents/learn_opengl/src/Model.cpp:92:61: error: invalid conversion from ‘const aiMaterial*’ to ‘aiMaterial*’ [-fpermissive]
   92 |     std::vector<Texture> diffuseMaps = loadMaterialTextures(material, aiTextureType_DIFFUSE, Texture::Type::Diffuse);
      |                                                             ^~~~~~~~
      |                                                             |
      |                                                             const aiMaterial*
In file included from /home/lorand/Documents/learn_opengl/src/Model.cpp:1:
/home/lorand/Documents/learn_opengl/include/Model.hpp:33:59: note:   initializing argument 1 of ‘std::vector<Texture> Model::loadMaterialTextures(aiMaterial*, aiTextureType, Texture::Type)’
   33 |     std::vector<Texture> loadMaterialTextures(aiMaterial* mat, aiTextureType aiType, Texture::Type type);
      |                                               ~~~~~~~~~~~~^~~
/home/lorand/Documents/learn_opengl/src/Model.cpp:95:62: error: invalid conversion from ‘const aiMaterial*’ to ‘aiMaterial*’ [-fpermissive]
   95 |     std::vector<Texture> specularMaps = loadMaterialTextures(material, aiTextureType_SPECULAR, Texture::Type::Specular);
      |                                                              ^~~~~~~~
      |                                                              |
      |                                                              const aiMaterial*
/home/lorand/Documents/learn_opengl/include/Model.hpp:33:59: note:   initializing argument 1 of ‘std::vector<Texture> Model::loadMaterialTextures(aiMaterial*, aiTextureType, Texture::Type)’
   33 |     std::vector<Texture> loadMaterialTextures(aiMaterial* mat, aiTextureType aiType, Texture::Type type);
      |                                               ~~~~~~~~~~~~^~~
/home/lorand/Documents/learn_opengl/src/Model.cpp:98:60: error: invalid conversion from ‘const aiMaterial*’ to ‘aiMaterial*’ [-fpermissive]
   98 |     std::vector<Texture> normalMaps = loadMaterialTextures(material, aiTextureType_HEIGHT, Texture::Type::Normal);
      |                                                            ^~~~~~~~
      |                                                            |
      |                                                            const aiMaterial*
/home/lorand/Documents/learn_opengl/include/Model.hpp:33:59: note:   initializing argument 1 of ‘std::vector<Texture> Model::loadMaterialTextures(aiMaterial*, aiTextureType, Texture::Type)’
   33 |     std::vector<Texture> loadMaterialTextures(aiMaterial* mat, aiTextureType aiType, Texture::Type type);
      |                                               ~~~~~~~~~~~~^~~
/home/lorand/Documents/learn_opengl/src/Model.cpp:101:60: error: invalid conversion from ‘const aiMaterial*’ to ‘aiMaterial*’ [-fpermissive]
  101 |     std::vector<Texture> heightMaps = loadMaterialTextures(material, aiTextureType_AMBIENT, Texture::Type::Height);
      |                                                            ^~~~~~~~
      |                                                            |
      |                                                            const aiMaterial*
/home/lorand/Documents/learn_opengl/include/Model.hpp:33:59: note:   initializing argument 1 of ‘std::vector<Texture> Model::loadMaterialTextures(aiMaterial*, aiTextureType, Texture::Type)’
   33 |     std::vector<Texture> loadMaterialTextures(aiMaterial* mat, aiTextureType aiType, Texture::Type type);
      |                                               ~~~~~~~~~~~~^~~
/home/lorand/Documents/learn_opengl/src/Model.cpp: In member function ‘std::vector<Texture> Model::loadMaterialTextures(aiMaterial*, aiTextureType, Texture::Type)’:
/home/lorand/Documents/learn_opengl/src/Model.cpp:116:54: error: cannot convert ‘std::string_view’ {aka ‘std::basic_string_view<char>’} to ‘const std::string&’ {aka ‘const std::__cxx11::basic_string<char>&’}
  116 |         auto textureOpt = Texture::load(str.C_Str(), m_directory, type);
      |                                                      ^~~~~~~~~~~
      |                                                      |
      |                                                      std::string_view {aka std::basic_string_view<char>}
In file included from /home/lorand/Documents/learn_opengl/include/Model.hpp:3:
/home/lorand/Documents/learn_opengl/include/Mesh.hpp:32:84: note:   initializing argument 2 of ‘static std::optional<Texture> Texture::load(const std::string&, const std::string&, Type)’
   32 |     static std::optional<Texture> load(const std::string& file, const std::string& directory, Type type);
      |                                                                 ~~~~~~~~~~~~~~~~~~~^~~~~~~~~
ninja: build stopped: subcommand failed.
